--- a/MyprojectChatBot/templates/chatbot/chatbot.html
+++ b/MyprojectChatBot/templates/chatbot/chatbot.html
@@ -113,7 +113,7 @@
             chatBubble.addEventListener('click', function() {
                 if (chatWindow.style.display === 'none' || chatWindow.style.display === '') {
                     chatWindow.style.display = 'block';
-                    Saludo("Soy el Financito. Estoy aquí para resolver tus consultas y ayudarte con cualquier problema que tengas.");
+                    Saludo("Hola soy mastercito. Estoy aquí para resolver tus consultas y ayudarte con cualquier problema que tengas.");
                 } else {
                     chatWindow.style.display = 'none';
                 }
